    - If the X server fails to startup (due to issues with vesa, or automatic
      probing), don't fail the entire bootup.
    - Fall back to noninteractive in these cases rather than attempting to start
      gdm/kdm/etc.

  [ Colin Watson ]
  * Adjust the way we open the debug log so that sys.stderr doesn't end up
    being fd 4.

 -- Mario Limonciello <mario_limonciello@dell.com>  Tue, 03 Feb 2009 16:31:27 -0600

ubiquity (1.11.6) jaunty; urgency=low

  [ Luke Yelavich ]
  * bin/ubiquity-dm: Fix accessibility breakage:
    - Check for the gconf accessibility flag in the user homedir, not /root
    - Instruct Orca to check for the gconf accessibility flag as the
      user and not root.

  [ Evan Dandrea ]
  * Automatic update of included source packages: base-installer
    1.98ubuntu1, choose-mirror 2.27ubuntu3, console-setup 1.28ubuntu5,
    partman-base 128ubuntu5, user-setup 1.23ubuntu9.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 03 Feb 2009 13:45:14 +0100

ubiquity (1.11.5) jaunty; urgency=low

  [ Evan Dandrea ]
  * Full screen the window when in ONLY_UBIQUITY mode.  The extra screen
    real estate makes the timezone map, among other widgets, easier to
    use.
  * Modified the keyboard setup page to produce a more visually obvious
    suggestion.
  * Automatic update of included source packages: grub-installer
    1.36ubuntu1, localechooser 2.09ubuntu1, user-setup 1.23ubuntu8.

  [ Mario Limonciello ]
  * Adjust logic for detecting incomplete language support.  Just 
    because a package doesn't "exist" doesn't mean that language support
    isn't all there.  Some packages don't yet provide language-support-XY
    packages. (LP: #290398)

  [ Colin Watson ]
  * Remove old XFS-on-/boot validation, no longer needed now that
    grub-install has been fixed (LP: #8058).
  * Default hostname to 'oem-laptop' or 'oem-desktop' as appropriate in OEM
    mode, to allow OEM installations to be fully preseeded (thanks, Twisted
    Lincoln, Inc.; LP: #321341).
