@@ -362,10 +362,9 @@ class FilteredCommand(object):
     # Default progress bar handling: just pass it through to the frontend.
 
     def progress_start(self, progress_min, progress_max, progress_title):
-        ret = self.frontend.debconf_progress_start(
+        self.frontend.debconf_progress_start(
             progress_min, progress_max, self.description(progress_title))
         self.frontend.refresh()
-        return ret
 
     def progress_set(self, progress_title, progress_val):
         ret = self.frontend.debconf_progress_set(progress_val)
@@ -388,9 +387,8 @@ class FilteredCommand(object):
             return True
 
     def progress_stop(self, progress_title):
-        ret = self.frontend.debconf_progress_stop()
+        self.frontend.debconf_progress_stop()
         self.frontend.refresh()
-        return ret
 
     def progress_region(self, progress_title,
                         progress_region_start, progress_region_end):
